Replace subjects with custom